# hyper-websocket-chat

./: Cargo.toml  README.md  index.html  main.js  style.css
src/: main.rs  shared_types.rs  utils.rs
src/endpoints/: hello.rs  mod.rs  not_found.rs  ws.rs
src/endpoints/ws_utils/: mod.rs  read.rs  write.rs
src/shared/: types.rs  utils.rs
src/ws/: consts.rs  encoding.rs  event.rs  frame.rs  handshake.rs  mod.rs  opcode.rs  read.rs  write.rs
