[package]
name = "hyper-websocket-chat"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
base64 = "0.11.0"
futures = "0.3.1"
hyper = "0.13.0"
sha-1 = "0.8.1"
tokio = { version = "0.2.4", features = ["full"] }
uuid = { version = "0.8.1", features = ["v4"] }
