[package]
name = "hyper-websocket-chat"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
base64 = "0.13.0"
futures = "0.3.8"
sha-1 = "0.9.2"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.hyper]
version = "0.14.2"
features = ["server", "http1", "tcp"]

[dependencies.tokio]
version = "1.0.1"
features = ["sync", "io-util"]
